--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -40,7 +40,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  camera: ^0.10.0+2
+  path_provider: ^2.0.11
+  path: ^1.8.2
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
