--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   firebase_core: ^2.6.0
   firebase_auth: ^4.5.0
+  cloud_firestore: ^3.1.5
   cupertino_icons: ^1.0.6
 
 dev_dependencies:
