--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -15,10 +15,12 @@ dependencies:
   #cloud_firestore: ^3.1.5
   cupertino_icons: ^1.0.6
 
+  camera: any
+  path: any
+  path_provider: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  camera: ^0.10.0+2
   path_provider: ^2.0.11
   path: ^1.8.2
   flutter_lints: ^4.0.0
