--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -12,12 +12,13 @@ dependencies:
     sdk: flutter
   firebase_core: ^2.6.0
   firebase_auth: ^4.5.0
-  #cloud_firestore: ^3.1.5
+  cloud_firestore: ^4.7.15
   cupertino_icons: ^1.0.6
-
+  
   camera: any
   path: any
   path_provider: any
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
