--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   camera: any
   path: any
   path_provider: any
+  csv: ^5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -28,3 +29,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - my_app\assets\cardAttributes.csv
