--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -28,6 +28,6 @@ dev_dependencies:
   flutter_lints: ^4.0.0
 
 flutter:
-  assets:
-   -assets/
+  # assets:
+  # -assets/
   uses-material-design: true
