--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -14,11 +14,14 @@ dependencies:
   firebase_auth: ^4.5.0
   cloud_firestore: ^4.7.15
   cupertino_icons: ^1.0.6
-  
   camera: any
   path: any
   path_provider: any
   csv: ^5.0.0
+  http: ^1.2.1
+  flutter_webview_plugin: ^0.4.0
+  flutter_secure_storage: ^5.0.2
+
 
 dev_dependencies:
   flutter_test:
