--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   http: ^1.2.1
   flutter_webview_plugin: ^0.4.0
   flutter_secure_storage: ^5.0.2
-
+  url_launcher: ^6.0.9
 
 dev_dependencies:
   flutter_test:
