--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -31,6 +31,7 @@ dev_dependencies:
   path_provider: ^2.0.11
   path: ^1.8.2
   flutter_lints: ^4.0.0
+  opencv_dart: ^1.1.0
 
 flutter:
   uses-material-design: true
