--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -22,8 +22,11 @@ dependencies:
   flutter_webview_plugin: ^0.4.0
   flutter_secure_storage: ^5.0.2
   url_launcher: ^6.0.9
-  
   image_picker: ^0.8.4+4
+  googleapis: ^9.1.0
+  googleapis_auth: ^1.3.0
+  http: ^0.14.0
+  image: ^3.0.1
 
 dev_dependencies:
   flutter_test:
