--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -27,13 +27,13 @@ dependencies:
   googleapis_auth: ^1.6.0
   image: ^4.2.0
 
+  opencv_dart: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
   path_provider: ^2.0.11
   path: ^1.8.2
   flutter_lints: ^4.0.0
-  opencv_dart: ^1.1.0
 
 flutter:
   uses-material-design: true
