Added manual cropping for selected images

--- a/my_app/android/app/src/main/AndroidManifest.xml
+++ b/my_app/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,13 @@
         android:label="TCGDex"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        
+        <!-- UCropActivity declaration for image cropping functionality -->
+        <activity
+            android:name="com.yalantis.ucrop.UCropActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
